--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -12,13 +12,18 @@ h1{
 	border-radius: 50%;
 }
 .slide{
-	display: flex;
+	color: white;
 	}
 .cover-slide{
 	width: 100%;
 	height: 70vh;
-	border: 2px solid red;
+	border: 2px solid white;
 	border-radius: 15px;
+}
+.detail{
+	display: flex;
+	
+	justify-content: center;
 }
 
 .container-link {
@@ -26,7 +31,10 @@ h1{
 	height: 70vh;
 	margin: 4% auto;
 	border-radius: 15px;
-
+}
+.containt{
+	margin: 0;
+	padding: 0;
 }
 
 /*.cover-slide:hover{
